packages/test-dev-server/tests/fixtures/invalidation/src/main.js
import nodeFs from 'node:fs';
import './parent';

globalThis.nodeFs = nodeFs;
